fix spacing on success page

--- a/src/app/stylesheets/booking_success.sass
+++ b/src/app/stylesheets/booking_success.sass
@@ -1,5 +1,5 @@
 %_section_padding
-  padding: 2rem 1rem
+  padding: 2.5rem 1rem
 
 .booking-success
   section
